--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cleave.js": "^1.6.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
