--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,10 @@
       "@/*":["src/*"]
     },
 
-    "target": "ES2020",
+    "target": "ES2021",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": ["ES2021.String", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
 
     /* Bundler mode */
